[tool.poetry]
name = "asp"
version = "0.1.0"
description = ""
authors = ["Tres Sims <tres.sims95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
validators = "^0.22.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
